Bug 113550 - FILEOPEN: RTF: Incorrect text indent
Summary: FILEOPEN: RTF: Incorrect text indent
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.0.0 target:5.4.4
Keywords: bibisected, bisected, filter:rtf, regression
: 113549 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-10-31 09:53 UTC by Xisco Faulí
Modified: 2017-11-10 16:48 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison MSO 2010 and LibreOffice 6.0 (99.65 KB, image/png)
2017-10-31 09:53 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-10-31 09:53:11 UTC
Created attachment 137398 [details]
comparison MSO 2010 and LibreOffice 6.0

Steps to reproduce:
1. Open attachment 58874 [details] from bug 47720
2. Check text indent of paragraph 'AVVERTENZE' in column 3

Observed behaviour: Before Text indent is 6.75 ch instead of 0.0ç

reproduced in

Version: 6.0.0.0.alpha1+
Build ID: d30522e46ca884e9bc74af21711d9537e8118859
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2017-10-31 09:54:14 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2017-10-10 05:58:26 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2017-10-10 17:43:13 (GMT)
commit 295cf49b81b8c008ec0ea2c92f7cf729d5523d4e (patch)
tree e56a25332d37a276b5f5da7a4784dda170972d19
parent f5c266695a4a88da7db971a21915e2bbf758d48e (diff)
tdf#112211 RTF import: fix unwanted direct formatting for other indents
Commit 56a695fddb915bcba13b088b5b2b4e0841d4acbc (tdf#112211 RTF import:
fix unwanted direct formatting for left indents, 2017-09-26) fixed left
indents, and given that it was a regression fix, left the other indent
types untouched.

As it has been pointed out in the bug comment, the original bugdoc
actually needs the other indent types removed as well, so let's do that.

Bisected with: bibisect-linux64-6.0

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2017-11-07 09:42:40 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5f4a3e7bd77c3294ef85eebec17ed2d624dc3a2d

tdf#113550 RTF import: fix incorrect text indent

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2017-11-07 20:48:20 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=54c1066d3f98ac15b51b57645ddca767247e622b&h=libreoffice-5-4

tdf#113550 RTF import: fix incorrect text indent

It will be available in 5.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2017-11-09 21:39:58 UTC
Verified in

Version: 6.0.0.0.alpha1+
Build ID: f5765d9f621bdc8fd0e1ac5eec1dcab9ae5b5d06
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: th-TH (ca_ES.UTF-8); Calc: group
Comment 5 Miklos Vajna 2017-11-10 16:48:53 UTC
*** Bug 113549 has been marked as a duplicate of this bug. ***