tdf#113550 RTF import: fix incorrect text indent

Left indent was set to non-zero in the style, but direct formatting set
it back to zero. Teach deduplication to remove the
NS_ooxml::LN_CT_PPrBase_ind SPRM itself in case the last attribute was
removed.

Change-Id: I01b202f0241b02816b2b392326737b1150caffc2