writerfilter/source/rtftok/rtfsprm.cxx
@@ -185,6 +185,9 @@ static bool isSPRMChildrenExpected(Id nId)
         SAL_FALLTHROUGH;
     case NS_ooxml::LN_CT_PrBase_shd:
         // Expected children are NS_ooxml::LN_CT_Shd_*.
+        SAL_FALLTHROUGH;
+    case NS_ooxml::LN_CT_PPrBase_ind:
+        // Expected children are NS_ooxml::LN_CT_Ind_*.
         return true;
 
     default:
